# robot2023

./: CMakeLists.txt  package.xml
data/: measurement_log1_postProcessed  pass1  pass2
include/: DDA
include/robot2023/: common.h  generate_map.h  reactive_follower.h  reactive_master.h
launch/: generateMap.py  main.py  main_real_launch.py  paintTrajectory.py  robot2023.rviz
launch/giraff/: giraff.py  giraff.rviz  nav2_launch.py  nav2_params.yaml
launch/rhodon/: nav2_launch.py  nav2_params.yaml  rhodon.py  rhodon.rviz
launch/simulation/: debug.xml  main_simulation_launch.py  robot2023.rviz  single_robot_nav.py
maps/Mapirlab/: occupancy.yaml
src/: generate_map.cpp  log_measurements.cpp  reactive.cpp  reactive_follower.cpp  reactive_master.cpp  test.cpp
